--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: 'Red Hat Display', sans-serif;
-  background-image: url('./images/pattern-background-desktop.svg');
+  background-image: url(./images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-color: hsl(225, 100%, 94%);
