--- a/css/styles.css
+++ b/css/styles.css
@@ -140,9 +140,11 @@ h6 {
   filter: brightness(0.4);
 }
 
-@media only screen and (max-width: 449px) {
+@media only screen and (max-width: 500px) {
   .box {
     width:85vw;
-
+  }
+  body{
+    background-image: url(C:/Users/lonew/Documents/GitHub/ordersummary_challenge/images/pattern-background-mobile.svg);
   }
 }
