--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,6 @@ h6 {
     width:85vw;
   }
   body{
-    background-image: url(C:/Users/lonew/Documents/GitHub/ordersummary_challenge/images/pattern-background-mobile.svg);
+    background-image: url(../images/pattern-background-mobile.svg);
   }
 }
